# Xenocrypt

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md~  Xenocrypt  cmake_install.cmake  compile_commands.json  conquest  conquest_sample_arena.webm  crypt  learn  pseudo  xeno
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: Untitled Document  Xenocrypt.cpp  conquest.cpp  crypt.cpp  learn.cpp  pseudo.cpp  xeno.cpp
